Wed Dec  2 17:19:02 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.h: introduce ISEQ_ORIGINAL_ISEQ() and
	  ISEQ_ORIGINAL_ISEQ_ALLOC() macro.

	* compile.c: use them to access original iseq buffer.

	* iseq.c: ditto.

	* vm_core.h: rename iseq field to support this fix.

Wed Dec  2 17:10:32 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.h: introduce ISEQ_FLIP_CNT_INCREMENT() macro.

	* compile.c (iseq_compile_each): use it.

	* vm_core.h: rename flip_cnt field to support this fix.

Wed Dec  2 17:05:15 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.h: introduce ISEQ_COVERAGE() and ISEQ_COVERAGE_SET() macro.

	* compile.c: use them.

	* iseq.c: ditto.

	* iseq.c (rb_iseq_coverage): added.

	* thread.c (update_coverage): use rb_iseq_coverage().

	* vm_core.h: rename coverage field name to support this fix.

Wed Dec  2 17:00:54 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (enc_name, rb_enc_name_list_i, rb_enc_aliases_enc_i):
	  make fstring instead of making each copies.

Wed Dec  2 16:32:08 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.h: introduce ISEQ_COMPILE_DATA() macro.

	* compile.c, iseq.c: use ISEQ_COMPILE_DATA().

	* vm_core.h: rename compile_data field to support this fix.

Wed Dec  2 16:27:19 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (enc_m_loader): defer finding encoding object not to
	  be infected by marshal source.  [ruby-core:71793] [Bug #11760]

	* marshal.c (r_object0): enable compatible loader on USERDEF
	  class.  the loader function is called with the class itself,
	  instead of an allocated object, and the loaded data.

	* marshal.c (compat_allocator_table): intialize
	  compat_allocator_tbl on demand.

	* object.c (rb_undefined_alloc): extract from rb_obj_alloc.

Wed Dec  2 15:12:43 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* configure.in: Fixed double negative comments.
	  [Bug #11698][ruby-core:71506]

Wed Dec  2 14:55:01 2015  yui-knk  <spiketeika@gmail.com>
